# llm-evaluation

./: .gitignore  README.md  pyproject.toml
.dev-resources/prompts/: .txt
.devcontainer/: .gitignore  README.md  setup.sh
.devcontainer/docs/plans/: 2026-03-07-agentic-llm-evaluator-design.md  2026-03-07-agentic-llm-evaluator.md
.devcontainer/src/llm_evaluator/: cli.py
.devcontainer/src/llm_evaluator/domain/: benchmark.py  config.py  (+1 more)
.devcontainer/templates/: report.md.j2
.devcontainer/tests/integration/: test_evaluate_command.py
.devcontainer/tests/services/: test_aggregation.py
docs/plans/: 2026-03-07-agentic-llm-evaluator-design.md  2026-03-19-uv-support-design.md  2026-03-19-uv-support.md  2026-03-21-self-contained-benchmark-prompts.md  2026-03-21-timestamped-output-dir-design.md  2026-03-21-timestamped-output-dir.md
examples/: sample-config.yaml
reports/sample-runs/2026-03-21_08-54-45_IST/: benchmark.json  report.md  results.json
src/llm_evaluator/: __init__.py  cli.py  logging_config.py
src/llm_evaluator/domain/: config.py
src/llm_evaluator/graph/: state.py  workflow.py
src/llm_evaluator/prompts/: generate_benchmark.py  judge_output.py
src/llm_evaluator/providers/: openrouter_client.py
src/llm_evaluator/services/: output_paths.py
tests/: test_smoke.py
tests/domain/: test_benchmark_schema.py  test_config.py
tests/graph/: test_generate_benchmark.py  test_judge_outputs.py  test_validate_benchmark.py  test_workflow.py
tests/integration/: test_dotenv_loading.py  test_evaluate_command.py
tests/providers/: test_openrouter_client.py
(+13 files in other folders)
